# openGLObjLoader

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  run.sh
.cache/clangd/index/: context.c.28101D32F3BA6381.idx  controls.cpp.6DC61E9431CD181F.idx  egl_context.c.5E085AF48D23330D.idx  fractional-scale-v1-client-protocol-code.h.532CA7EFEA19579E.idx  fractional-scale-v1-client-protocol.h.7E70B2DF61884841.idx  glew.h.DC35D2CCF88B28C8.idx  glfw3.h.913C5FA53EC12919.idx  glfw3native.h.92C4288F5F800F4D.idx  glx_context.c.35C81B429A488C48.idx  idle-inhibit-unstable-v1-client-protocol-code.h.20ECC0DC49493E3F.idx  idle-inhibit-unstable-v1-client-protocol.h.B8A578370EF2853D.idx  init.c.B74D566042C1687E.idx  input.c.E91CC1D203C89BDE.idx  internal.h.9FFAAE75DBB07086.idx  linux_joystick.c.4E3929B5B9074641.idx  linux_joystick.h.DB974C50A8FD93B8.idx  main.cpp.85D7C423DDF1BEFE.idx  main.cpp.9B6FDBA78BD86C55.idx  mappings.h.B1B1FC3F2CB82FB8.idx  monitor.c.B49920F5EDFF04CE.idx  null_init.c.9AADAF8932E6037F.idx  null_joystick.c.06D2B3F98DB506C4.idx  null_joystick.h.05C669A4D10B68D0.idx  null_monitor.c.87AE8DA82F0D341F.idx  null_platform.h.54FBF7615E2389CD.idx  null_window.c.AF542945B31CE9EE.idx  osmesa_context.c.E9CA0C885D890C94.idx  platform.c.912CC6D1252B4607.idx  platform.h.26FDEF33E718C75E.idx  pointer-constraints-unstable-v1-client-protocol-code.h.98E7F441D13C0F1C.idx  pointer-constraints-unstable-v1-client-protocol.h.2D319EB677BDCC11.idx  posix_module.c.42849B7F3242508F.idx  (+34 more)
src/: controls.cpp  main.cpp  shaders.cpp  utils.cpp
src/models/: vertexModel.cpp
